####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libnetwork_a_METASOURCES = AUTO

noinst_LIBRARIES = libnetwork.a

libnetwork_a_SOURCES = stringconverter.cpp serverinterface.cpp networkmanager.cpp client.cpp clientinterface.cpp 
KDE_OPTIONS = qtonly

SUBDIRS = reactor 

EXTRA_DIST = clientinterface.cpp clientinterface.h client.cpp client.h networkmanager.cpp networkmanager.h serverinterface.cpp serverinterface.h stringconverter.cpp stringconverter.h 

####### kdevelop will overwrite this part!!! (end)############
