####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libpd_a_METASOURCES = AUTO

noinst_LIBRARIES = libpd.a

libpd_a_SOURCES = serverthread.cpp spielmanager.cpp pdkontroller.cpp bombe.cpp wand.cpp mauer.cpp spielelement.cpp spielfeld.cpp spielfigur.cpp spielfeldclient.cpp spielerclient.cpp spiel.cpp guitopdinterface.cpp 
KDE_OPTIONS = qtonly


EXTRA_DIST = guitopdinterface.cpp guitopdinterface.h spiel.cpp spiel.h spielerclient.cpp spielerclient.h spielfeld.h spielfeldclient.cpp spielfeldclient.h spielfigur.cpp spielfigur.h spielfeld.cpp spielelement.cpp spielelement.h mauer.cpp mauer.h wand.cpp wand.h bombe.cpp bombe.h pdkontroller.cpp pdkontroller.h spielmanager.cpp spielmanager.h serverthread.cpp serverthread.h 

####### kdevelop will overwrite this part!!! (end)############
