####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libui_a_METASOURCES = AUTO

noinst_LIBRARIES = libui.a

libui_a_SOURCES = playerlistview.cpp emptyview.cpp spieloptview.cpp serverview.cpp joinserverview.cpp flammenview.moc.cpp flammenview.cpp bombenview.cpp wandview.cpp spielview.cpp spielfigurview.cpp spielfeldview.cpp pdtoguiinterface.cpp mauerview.cpp abstractspielelement.cpp 
KDE_OPTIONS = qtonly

SUBDIRS = generated 

EXTRA_DIST = abstractspielelement.cpp abstractspielelement.h mauerview.cpp mauerview.h pdtoguiinterface.cpp pdtoguiinterface.h spielfeldview.cpp spielfeldview.h spielfigurview.cpp spielfigurview.h spielview.cpp spielview.h wandview.cpp wandview.h bombenview.cpp bombenview.h flammenview.cpp flammenview.h flammenview.moc.cpp joinserverview.cpp joinserverview.h serverview.cpp serverview.h spieloptview.cpp spieloptview.h emptyview.cpp emptyview.h playerlistview.cpp playerlistview.h 

####### kdevelop will overwrite this part!!! (end)############
