####### kdevelop will overwrite this part!!! (begin)##########

INCLUDES = $(all_includes)

libreactor_a_METASOURCES = AUTO

noinst_LIBRARIES = libreactor.a

libreactor_a_SOURCES = playerhandler.cpp reactor.cpp gamehandler.cpp demuxtable.cpp connectionacceptor.cpp 
KDE_OPTIONS = qtonly


EXTRA_DIST = connectionacceptor.cpp connectionacceptor.h demuxtable.cpp demuxtable.h eventhandler.h gamehandler.cpp gamehandler.h reactor.cpp reactor.h playerhandler.cpp playerhandler.h 

####### kdevelop will overwrite this part!!! (end)############
